webpack config done 🍩

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "chrome extension for web scraper ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode=production --watch",
+    "build:prod": "webpack --mode=production"
   },
   "keywords": [
     "google-extension",
@@ -13,5 +15,15 @@
     "data-scraper"
   ],
   "author": "khayrul alam",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^2.1.1",
+    "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.32.2",
+    "webpack-cli": "^3.3.2"
+  }
 }
