--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "style-loader": "^0.23.1",
     "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2"
+  },
+  "dependencies": {
+    "xlsx": "^0.14.3"
   }
 }
