--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Data Scraping",
   "version": "1.0",
-  "description": "Build an Extension!",
+  "description": "Data scraping extension 🙉 extract data out of HTML web pages and imports 🔥 it into Excel and CSV 🕸",
   "icons": {
     "16": "icon/icon-16.png",
     "32": "icon/icon-32.png",
@@ -9,7 +9,13 @@
     "128": "icon/icon-128.png"
   },
   "manifest_version": 2,
-  "permissions": ["declarativeContent", "activeTab", "storage", "tabs"],
+  "permissions": [
+    "declarativeContent",
+    "activeTab",
+    "storage",
+    "tabs",
+    "identity"
+  ],
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
@@ -34,5 +40,9 @@
     "page": "client/index.html",
     "open_in_tab": false
   },
-  "web_accessible_resources": ["client/index.html"]
+  "web_accessible_resources": ["client/index.html"],
+  "oauth2": {
+    "client_id": "138346118654-j727r7fcmvviei2suju8153lane2c38f.apps.googleusercontent.com",
+    "scopes": ["https://www.googleapis.com/auth/userinfo.email"]
+  }
 }
